data/derived/sp14/progs/unify/prog1663.ml.out
Characters 21-23:
  let _ = abs_float (-.40);;
                       ^^
Error: This expression has type int but an expression was expected of type
         float
